# datalad-neuroimaging

./: .appveyor.yml  .codeclimate.yml  .datalad-release-action.yaml  .gitattributes  .gitignore  .gitmodules  .readthedocs.yaml  .travis.yml  .zenodo.json  CHANGELOG.md  CONTRIBUTORS  MANIFEST.in  Makefile  README.md  appveyor.yml  formatters.py  pyproject.toml  requirements-devel.txt  requirements.txt  setup.cfg  setup.py  setup_support.py  tox.ini  versioneer.py
.github/workflows/: add-changelog-snippet.yml  docbuild.yml  release.yml  test.yml  test_crippledfs.yml
_datalad_buildsupport/: formatters.py  setup.py
changelog.d/: pr-130.md  pr-131.md  pr-132.md  pr-134.md  pr-136.md  pr-138.md  pr-140.md  scriv.ini
changelog.d/templates/: new_fragment.md.j2
datalad_helloworld/: __init__.py
datalad_neuroimaging/: __init__.py  _version.py  bids2gindatacite.py  bids2gindoifile.py  bids2scidata.py  bidsapp.py  conftest.py  version.py
datalad_neuroimaging/commands/: cbbs_heuristic.py  create_study.py  dicom2bids_rules.py  dicom2spec.py  import_dicoms.py
datalad_neuroimaging/extractors/: bids.py  bids_dataset.py  dicom.py  fslfeat.py  minc.py  nidm.py  nidmresults.py  nifti1.py
datalad_neuroimaging/extractors/tests/: __init__.py  test_bids.py  test_bids_dataset.py  test_dicom.py  test_fslfeat.py  test_nidm.py  test_nidmresults.py  test_nifti1.py
datalad_neuroimaging/resources/procedures/: cfg_bids.py  cfg_bids_dataset.py  setup_bids_dataset.py
datalad_neuroimaging/tests/: test_aggregation.py  test_bids2scidata.py  test_dicomconv.py  test_import.py  test_procedure.py  test_register.py  test_search.py  utils.py
debian/: changelog  control  copyright  rules  watch
dmhelloworld/: __init__.py
docs/: Makefile  README.md
docs/examples/: nipype_workshop_dataset.sh
docs/source/: acknowledgements.rst  changelog.rst  conf.py  index.rst  modref.rst
docs/source/usecases/: index.rst  reproducible_analysis.rst
tools/: Singularity  Singularity.devmaster
webapp/: app.py
webapp/static/: scripts.js
