[metadata]
name = datalad_neuroimaging
url = https://github.com/datalad/datalad-neuroimaging
author = The DataLad Team and Contributors
author_email = team@datalad.org
description = DataLad extension package for neuro/medical imaging
long_description = file:README.md
long_description_content_type = text/markdown; charset=UTF-8
license = MIT
classifiers =
    Programming Language :: Python
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3

[options]
zip_safe = False
python_requires = >= 3.9
install_requires =
    datalad >= 0.16.7
    datalad-deprecated >= 0.2.7
    pydicom >= 2.0.0  # DICOM metadata
    pybids >= 0.15.1  # BIDS metadata
    nibabel  # NIfTI metadata
    pandas  # bids2scidata export
    datalad-metalad >= 0.4.5
packages = find:
include_package_data = True

[options.extras_require]
# this matches the name used by -core and what is expected by some CI setups
devel =
    pytest
    pytest-cov
    pypandoc
    datalad >= 0.17.0
    sphinx >= 1.6.2
    sphinx-rtd-theme
    heudiconv
devel-docs =
    pypandoc
    sphinx >= 1.6.2
    sphinx-rtd-theme
devel-downstream =
    heudiconv

[options.packages.find]
# do not ship the build helpers
include = datalad*
exclude=
    _datalad_buildsupport

[options.entry_points]
# 'datalad.extensions' is THE entrypoint inspected by the datalad API builders
datalad.extensions =
    # the label in front of '=' is the command suite label
    # the entrypoint can point to any symbol of any name, as long it is
    # valid datalad interface specification (see demo in this extensions)
    neuroimaging = datalad_neuroimaging:command_suite
datalad.webapps =
    pork = webapp.app:Pork
datalad.metadata.extractors =
    bids = datalad_neuroimaging.extractors.bids:MetadataExtractor
    dicom = datalad_neuroimaging.extractors.dicom:MetadataExtractor
    nidm = datalad_neuroimaging.extractors.nidm:MetadataExtractor
    nifti1 = datalad_neuroimaging.extractors.nifti1:MetadataExtractor
    bids_dataset = datalad_neuroimaging.extractors.bids_dataset:BIDSDatasetExtractor
datalad.tests =
    neuroimaging = datalad_neuroimaging

[versioneer]
# See the docstring in versioneer.py for instructions. Note that you must
# re-run 'versioneer.py setup' after changing this section, and commit the
# resulting files.
VCS = git
style = pep440
versionfile_source = datalad_neuroimaging/_version.py
versionfile_build = datalad_neuroimaging/_version.py
tag_prefix =

[coverage:report]
show_missing = True
omit =
    # versioneer code
    datalad_neuroimaging/_version.py
